
    native sub carg : double ($z : SPVM::Complex_2d);
    native sub cargf : float ($z : SPVM::Complex_2f);

    native sub conj : SPVM::Complex_2d ($z : SPVM::Complex_2d);
    native sub conjf : SPVM::Complex_2f ($z : SPVM::Complex_2f);

    native sub cproj : SPVM::Complex_2d ($z : SPVM::Complex_2d);
    native sub cprojf : SPVM::Complex_2f ($z : SPVM::Complex_2f);
  
0.0910 2020-08-31
  - add new_c method to SPVM::Builder::Config
  - add new_cpp11 method to SPVM::Builder::Config
  - fix C++ SPVM_DIE type conversion bug
0.0909 2020-08-26
  - remove SPVM::IO::File, SPVM::IO::File::Handle because File I/O is a little complex for SPVM project and has many bugs.
  - add complex examples
  - remove no needed module documents
0.0908 2020-08-20
  - add complex, complexf to SPVM::Math
  - move complex function from SPVM::Util to SPVM::Math
  - remove complex int, long complex functions
  - remove complex absolute, conjunction functions
  - Not support Alpine Linux because Alpine Linux tests fail in current SPVM
  - precompile C source code floating point constant become hex expression
0.0907 2020-08-16
  - add caddi, caddl, caddf, caddd to SPVM::Util
  - add csubi, csubl, csubf, csubd to SPVM::Util
  - add cmuli, cmull, cmulf, cmuld to SPVM::Util
  - add cdivi, cdivl, cdivf, cdivd to SPVM::Util
  - add cscamuli, cscamull, cscamulf, cscamuld to SPVM::Util
  - add cabsi, cabsl, cabsf, cabsd to SPVM::Util
  - add cconi, cconl, cconf, ccond to SPVM::Util
0.0906 2020-08-10
  - add add,sub,scamul,mul,new_ident,new_zero method to SPVM::Matrix::* class.
0.0905 2020-08-08
  - remove SPVM::NDArray and related modules because SPVM::NDArray is too big and complex for SPVM Core Modules.
  - add SPVM::Matrix related modules.
0.0904 2020-07-30
  - fix bug that segfault occur when new a package which don't have subroutines
0.0903 2020-07-17
  - fix big size array tests
0.0902 2020-07-17
  - fix array big size test bugs
  - change Perl version requirement from v5.10 to v5.8.7